[gd_scene load_steps=2 format=3 uid="uid://bpwxc2r4yq8kt"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hud")

[node name="TopBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="DigiBytes" type="HBoxContainer" parent="TopBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -15.0
offset_right = 150.0
offset_bottom = 15.0
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Icon" type="TextureRect" parent="TopBar/DigiBytes"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_vertical = 4
stretch_mode = 5

[node name="CurrencyLabel" type="Label" parent="TopBar/DigiBytes"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 0.85, 0, 1)
theme_override_font_sizes/font_size = 18
text = "DB:"

[node name="AmountLabel" type="Label" parent="TopBar/DigiBytes"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "200"

[node name="Lives" type="HBoxContainer" parent="TopBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 180.0
offset_top = -15.0
offset_right = 280.0
offset_bottom = 15.0
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Icon" type="TextureRect" parent="TopBar/Lives"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_vertical = 4
stretch_mode = 5

[node name="LivesLabel" type="Label" parent="TopBar/Lives"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 18
text = "Lives:"

[node name="AmountLabel" type="Label" parent="TopBar/Lives"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "20"

[node name="Wave" type="HBoxContainer" parent="TopBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -15.0
offset_right = -160.0
offset_bottom = 15.0
grow_horizontal = 0
grow_vertical = 2

[node name="WaveLabel" type="Label" parent="TopBar/Wave"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Wave 0"

[node name="SpeedButton" type="Button" parent="TopBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -20.0
offset_right = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "1.0x"

[node name="BottomPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0

[node name="SpawnControls" type="HBoxContainer" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -30.0
offset_right = 150.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="SpawnTowerBtn" type="Button" parent="BottomPanel/SpawnControls"]
custom_minimum_size = Vector2(140, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "SPAWN TOWER"

[node name="HelpLabel" type="Label" parent="BottomPanel/SpawnControls"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "Click empty cell
or use button"
horizontal_alignment = 1
